--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-*.iml
-.gradle
+.gradle/
+.idea/
+build/
+bin
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
+*.DS_Store
+*libs/.DS_Store
+**/*.iml
